# friend-lite

./: .env.secrets.template  .env.template  .gitignore  .gitmodules  .pre-commit-config.yaml  CLAUDE.md  DOCKER-COMPOSE.md  ENVIRONMENTS.md  INSTALL.md  Makefile  Makefile.unittests  README-K8S.md  README.md  SETUP.md  WIZARD.md  chronicler.excalidraw  config.yml  config_manager.py  docker-compose.yml  quickstart.md  restart.sh  services.py  setup-requirements.txt  setup_utils.py  start-env.sh  start.sh  status.py  status.sh  stop.sh  wizard.py  wizard.sh
.github/workflows/: README.md  advanced-backend-unit-tests.yml  advanced-docker-compose-build.yml  full-tests-with-api.yml  pr-tests-with-api.yml  robot-tests.yml
Docs/: audio-pipeline-architecture.md  features.md  getting-started.md  init-system.md  ports-and-access.md
Docs/development/: DOCKER-SETUP-SUMMARY.md  README.md  SETUP_COMPLETE.md  SETUP_WIZARD_SUMMARY.md
Docs/setup/: linux.md  macos.md  prerequisites.md  tailscale.md  windows-gitbash.md  windows-wsl2.md
Docs/whisper-adapter-finetuning/: README.md  evaluate_sneeze_model.py  prepare_sneeze_data.py  train_sneeze.py
app/: README.md  app.json  package-lock.json  package.json
app/app/: _layout.tsx  diagnostics.tsx  index.tsx
app/plugins/: with-ats.js
app/src/: theme.ts
backends/advanced/: .dockerignore  .env.bak  .env.template  Caddyfile.template  Dockerfile  Makefile.unittests  README.md  SETUP_SCRIPTS.md  cleanup.sh  docker-compose-test.yml  docker-compose.override.yml  docker-compose.yml  generate-caddyfile.sh  init.py  pyproject.toml  run-test.sh  start-k8s.sh  start-workers.sh  start.sh  upload_files.py  worker_orchestrator.py
backends/simple/: main.py
certs/: generate-ssl.sh
compose/: advanced-backend.yml  asr-services.yml  caddy.yml  infrastructure-shared.yml  mycelia.yml  observability.yml  openmemory.yml  speaker-recognition.yml
config/: README.md  config.yml.template  defaults.yml  plugins.yml  plugins.yml.template  stt-providers-catalog.yml
extras/asr-services/: .env.template  Dockerfile_Parakeet  client.py  docker-compose-test-strixhalo.yml  docker-compose.yml  enhanced_chunking.py  init.py  parakeet-offline.py  pyproject.toml
extras/friend-lite-sdk/: README.md  pyproject.toml
extras/friend-lite-sdk/friend_lite/: __init__.py  bluetooth.py  button.py  decoder.py  discover_characteristics.py  neo1.py  transcribe.py  uuids.py  wifi.py
extras/havpe-relay/: .dockerignore  .gitignore  README.md  device_controller.py  docker-compose.yml  flash.sh  init.py  init.sh  main.py  menu_relay.py  pyproject.toml  relay_core.py  service.py  test_audio_output.py
extras/havpe-relay/firmware/: secrets.template.yaml  voice-chronicle.yaml  voice-tcp.yaml
extras/havpe-relay/firmware/chronicle-sdk/: chronicle.h
extras/langfuse/: init.py
extras/local-omi-bt/: scan_devices.py  send_to_adv.py
extras/local-wearable-client/: backend_sender.py  devices.yml  main.py  menu_app.py  pyproject.toml  service.py  start.sh  wifi_join.py  wifi_receiver.py
extras/ml-training/: README.md
extras/obsidian-injest/: config.py  search_query.py
extras/openmemory-mcp/: .env.template  README.md  docker-compose.yml  setup.sh  test_standalone.py
extras/speaker-omni-experimental/: data_preparation.py  qwen_speaker_diarizer.py
extras/speaker-recognition/: .env.template  Caddyfile.template  Dockerfile  Dockerfile.strixhalo  README.md  docker-compose.yml  init.py  laptop_client.py  pyproject.toml  run-test.sh
extras/speaker-recognition/scripts/: download-pyannote.py  enroll_from_backup.py  enroll_speaker.py  install-pytorch.py  simple_enroll.py  test_diarize.py  test_workflow.py  youtube_cli.py
extras/speaker-recognition/src/simple_speaker_recognition/: __init__.py
extras/speaker-recognition/src/simple_speaker_recognition/api/: __init__.py  service.py
extras/speaker-recognition/src/simple_speaker_recognition/api/core/: __init__.py  utils.py
extras/speaker-recognition/src/simple_speaker_recognition/api/routers/: __init__.py  deepgram_wrapper.py  enrollment.py  identification.py  speakers.py  users.py  websocket_wrapper.py
extras/speaker-recognition/src/simple_speaker_recognition/core/: __init__.py  audio_backend.py  backend_client.py  models.py  seeded_clustering.py  unified_speaker_db.py
extras/speaker-recognition/src/simple_speaker_recognition/database/: __init__.py  models.py  queries.py
extras/speaker-recognition/src/simple_speaker_recognition/utils/: __init__.py  analysis.py  audio_processing.py  audio_segment_manager.py  cache_manager.py  deepgram_parser.py  embedding_manager.py  quality.py  transcript_processor.py  visualization.py  youtube_transcriber.py
extras/speaker-recognition/tests/: test_speaker_service_integration.py
extras/speaker-recognition/webui/src/services/: api.ts  deepgram.ts  speakerIdentification.ts
plugins/email_summarizer/: __init__.py  config.yml  email_service.py  plugin.py  setup.py  templates.py
plugins/homeassistant/: __init__.py  command_parser.py  entity_cache.py  mcp_client.py  plugin.py
plugins/hourly_recap/: __init__.py  plugin.py
plugins/test_button_actions/: __init__.py  config.yml  plugin.py
plugins/test_event/: __init__.py  event_storage.py  plugin.py
scripts/: check_uv.sh  configure-tailscale-serve.sh  finalize-setup.sh  generate-caddyfile.sh  generate-docker-configs.py  generate-k8s-configs.py  install-deps.sh  pull-images.sh  push-images.sh  setup-environment.sh  setup-secrets.sh  setup-tailscale.sh
scripts/lib/: env_utils.py
tests/: .env.test  .gitignore  Makefile  README.md  TESTING_GUIDELINES.md  run-no-api-tests.sh  run-robot-tests.sh  setup-test-containers.sh  show_results.py  tags.md  teardown-test-containers.sh  test-requirements.txt  test_timestamp.robot
tests/asr/: gpu_integration_tests.robot  protocol_tests.robot
tests/config/: plugins.test.yml
tests/configs/: deepgram-openai.yml  mock-services.yml  mock-vibevoice.yml
tests/configuration/: test_llm_custom_provider.robot  test_transcription_url.robot
tests/endpoints/: annotation_suggestions_tests.robot  health_tests.robot  (+9 more)
(+371 files in other folders)
