[project]
name = "simple-speaker-recognition"
version = "0.1.0"
description = "Speaker recognition and diarization service for friend-lite"
requires-python = ">=3.11,<3.14"

dependencies = [
    "fastapi>=0.115.12",
    "uvicorn>=0.34.2",
    "scipy>=1.10.0",
    "pyannote.audio>=4.0; extra != 'strixhalo'",
    "torchcodec<0.10; extra != 'strixhalo'",  # 0.10+ requires PyTorch newer than 2.9
    "aiohttp>=3.8.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.6",
    "pydantic>=2.0.0",
    "soundfile>=0.12",
    "easy-audio-interfaces>=0.7.1",
    "pydantic-settings>=2.10.1",
    "deepgram-sdk>=4.7.0",
    "pydub>=0.25.1",
    "yt-dlp>=2025.7.21",
    "websockets>=12.0",
    "pyyaml>=6.0.0",
    "omegaconf>=2.3.0",
    # Audio processing and visualization
    "librosa>=0.10.0",
    "plotly>=5.18.0",
    "matplotlib>=3.8.0",
    # Database
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    # Data processing
    "pandas>=2.0.0",
    "scikit-learn>=1.4.0",
    "umap-learn>=0.5.3",
    "faiss-cpu>=1.9",
]

[project.optional-dependencies]
local-audio = [
    "easy-audio-interfaces[local-audio]>=0.7.1",
]

cpu = [
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
]

cu126 = [
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
]

cu128 = [
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
]

strixhalo = [
    # Provided by the base image; keep listed so `tool.uv.sources` can scope them to this extra,
    # but mark them as never-selected so uv won't install/upgrade them into the venv.
    "torch>=2.0.0; sys_platform == 'never'",
    "torchaudio>=2.0.0; sys_platform == 'never'",
    "torchvision>=0.15.0; sys_platform == 'never'",
    # pyannote.audio from git (installed with --no-deps, dependencies listed separately below)
    "pyannote.audio",
    # OpenTelemetry dependencies for pyannote.audio
    "opentelemetry-api>=1.39.0",
    "opentelemetry-sdk>=1.39.0",
    "opentelemetry-exporter-otlp>=1.34.0",
    # Pyannote dependencies
    "pyannote-pipeline>=4.0.0",
    "pyannote-metrics>=4.0.0",
    "pyannoteai-sdk>=0.3.0",
    # Audio processing dependencies
    "asteroid-filterbanks>=0.4.0",
    "pytorch-metric-learning>=2.8.1",
    # PyTorch Lightning (required by pyannote.audio)
    "lightning>=2.0.0",
    "torch_audiomentations",
]

[tool.uv]
required-environments = ["sys_platform == 'linux' and platform_machine == 'x86_64'"]
conflicts = [
    [
        { extra = "cpu" },
        { extra = "cu126" },
        { extra = "cu128" },
        { extra = "strixhalo" },
    ],
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu126", extra = "cu126" },
    { index = "pytorch-cu128", extra = "cu128" },
]
torchaudio = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu126", extra = "cu126" },
    { index = "pytorch-cu128", extra = "cu128" },
]
"pyannote.audio" = { git = "https://github.com/pyannote/pyannote-audio.git", extra = "strixhalo" }
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
simple-speaker-service = "simple_speaker_recognition.api.service:main"
simple-speaker-web = "simple_speaker_recognition.web.app:main"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
]

test = [
    "pytest",
    "requests",
]

[tool.isort]
profile = "black"
